--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -10,3 +10,13 @@
 #mainNavbarCollapsable ul.mainmenu {
     color: #000000;
 }
+
+.no-touch #mainNavbarCollapsable ul.mainmenu>li:hover,
+.touch #mainNavbarCollapsable ul.mainmenu>li.hover {
+    color: #000000;
+    background-color: #ffffff;
+    border-color: rgba(0, 0, 0, 0.15);
+    -webkit-box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.15);
+    -moz-box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.15);
+    box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.15);
+}
