--- a/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
+++ b/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
@@ -1,7 +1,6 @@
-{% extends getPartial('DefaultHeader') %}
 {% import "Ceres::PageDesign.Macros.LayoutContainer" as LayoutContainer %}
 
-<header id="page-header" class="top-bar fixed-top cccc">
+<header id="page-header" class="top-bar fixed-top cccc xxxxx">
     <div>
         <div class="container-max">
             <div class="row mx-0">
