--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -21,6 +21,19 @@
     box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.15);
 }
 
+.top-bar .controls-list>li a:not(.btn):hover {
+    background-color: #ffffff;
+    color: #000000;
+    border-color: rgba(0, 0, 0, 0.15);
+    -webkit-box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.15);
+    -moz-box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.15);
+    box-shadow: -1 1px 5px 0 rgba(0, 0, 0, 0.15);
+}
+
+.anicon>.anicon-search-item:before {
+    background: #000000;
+}
+
 @media (min-width: 992px) {
     #mainNavbarCollapsable ul.mainmenu>li>ul {
         background-color: #ffffff;
