--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -55,8 +55,20 @@ nav.navbar:not(.megamenu) .nav-dropdown-inner li:hover {
     background: #ffffff;
 }
 
-.anicon.anicon-search-xcross[aria-expanded="true"]>.anicon-search-item:before, .anicon.anicon-search-xcross[aria-expanded="true"]>.anicon-search-item:after {
+.anicon.anicon-search-xcross[aria-expanded="true"]>.anicon-search-item:before,
+.anicon.anicon-search-xcross[aria-expanded="true"]>.anicon-search-item:after {
     background: #000000;
+}
+
+
+.cmp-search-box {
+    background-color: #ffffff;
+    border-top: 1px solid #828282;
+    border-bottom: 1px solid #828282;
+}
+
+.cmp-search-box .search-submit {
+    color: #000000;
 }
 
 @media (min-width: 992px) {
