bb-25102019-9 add new text in footer

--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -9,7 +9,7 @@
 {% set footerContainer = LayoutContainer.show("Ceres::Footer") | trim %}
 {% if footerContainer is empty %}
 
-<div class="footer aaaa">
+<div class="footer">
 
     <div class="{% if topButtonPosition == "right" %}back-to-top{% else %}back-to-top-center{% endif %} hidden-sm-down">
         <i class="fa fa-chevron-up"></i>
@@ -131,6 +131,8 @@
             </a>
             <br>
             <small>&copy; Copyright {{ "now" | date("Y") }} | {{ trans("Ceres::Template.footerAllRightsReserved") }}</small>
+            <br>
+            {% include "BlueBerry::PageDesign.Partials.FooterText" %}
         </div>
     </div>
 </div>
