bb-25102019-11 change layout

--- a/resources/views/PageDesign/Partials/FooterText.twig
+++ b/resources/views/PageDesign/Partials/FooterText.twig
@@ -1,1 +1,1 @@
-<p><smal>Blue-Berry GmbH, Schlossberg 2, 83435 Bad Reichenhall, Commercial register: HRB 27197, Register court: Amtsgericht Traunstein, Director: Mirko Gutermuth, VAT identification: DE319894643</smal></p>
+<p><small>Blue-Berry GmbH, Schlossberg 2, 83435 Bad Reichenhall, Commercial register: HRB 27197, Register court: Amtsgericht Traunstein, Director: Mirko Gutermuth, VAT identification: DE319894643</small></p>
