bb-25102019-11 put newsletter form in footer

--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -97,6 +97,8 @@
             </div>
             <div class="col-12 col-sm-3">
                 <div class="footer-column row">
+                    {% include "Ceres::Newsletter.Components.NewsletterInput" %}
+
                     {% set rowTwo = LayoutContainer.show("Ceres::Footer.RowTwo") %}
 
                     {{ rowTwo }}
