--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -97,6 +97,9 @@
             </div>
             <div class="col-12 col-sm-3">
                 <div class="footer-column row">
+                    {% set newsletterBox = LayoutContainer.show("Ceres::NewsletterWidget") %}
+                    {{ newsletterBox }}
+
                     {% set rowTwo = LayoutContainer.show("Ceres::Footer.RowTwo") %}
 
                     {{ rowTwo }}
