bb-25102019-14 put newsletter form in footer

--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -97,8 +97,8 @@
             </div>
             <div class="col-12 col-sm-3">
                 <div class="footer-column row">
-                    {% set newsletterBox = LayoutContainer.show("Ceres::NewsletterWidget") %}
-                    {{ newsletterBox }}
+                    {{ LayoutContainer.show("Ceres::NewsletterWidget") }}
+
 
                     {% set rowTwo = LayoutContainer.show("Ceres::Footer.RowTwo") %}
 
