bb-25102019-15 put newsletter form in footer

--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -97,7 +97,7 @@
             </div>
             <div class="col-12 col-sm-3">
                 <div class="footer-column row">
-                    {{ LayoutContainer.show("Ceres::NewsletterWidget") }}
+                    {% include "Ceres::Newsletter.NewsletterOptOut" %}
 
 
                     {% set rowTwo = LayoutContainer.show("Ceres::Footer.RowTwo") %}
