--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -125,6 +125,11 @@ nav.navbar:not(.megamenu) .nav-dropdown-inner li:hover {
     line-height: 1.5;
 }
 
+.widget.widget-legal-texts.h4 div {
+    font-size: 1rem;
+    line-height: 1.5;
+}
+
 @media (min-width: 992px) {
     #mainNavbarCollapsable ul.mainmenu>li>ul {
         background-color: #ffffff;
