--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -4,8 +4,9 @@ body>#vue-error {
     background-color: #ffffff;
 }
 
-.navbar {
+.wrapper-main .navbar {
     background-color: #ffffff;
+    border-top: 1px solid #efefef;
 }
 
 #page-header.top-bar {
@@ -14,6 +15,7 @@ body>#vue-error {
 
 .wrapper-main>nav.container-max {
     background: #ffffff;
+    border-top: 1px solid #efefef;
 }
 
 .top-bar .controls-list>li a:not(.btn) {
