--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -18,6 +18,10 @@ body>#vue-error {
     border-bottom: 1px solid #efefef;
 }
 
+.page-content {
+    background-color: #ffffff;
+}
+
 .top-bar .controls-list>li a:not(.btn) {
     color: #000000;
 }
@@ -127,6 +131,10 @@ nav.navbar:not(.megamenu) .nav-dropdown-inner li:hover {
     -webkit-box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.15);
     -moz-box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.15);
     box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.15);
+}
+
+.footer {
+    background-color: #ffffff;
 }
 
 .footer .widget-legal-information {
