--- a/resources/views/Item/Components/SingleItem/SingleItem_Details.twig
+++ b/resources/views/Item/Components/SingleItem/SingleItem_Details.twig
@@ -20,7 +20,10 @@
             <b>{{ trans("Ceres::Template.singleItemNumber") }} </b>
             <span>${ currentVariation.variation.number }</span>
         </p>
-
+        <p>
+            <b>EAN </b>
+            <span>${ barcode.code }</span>
+        </p>
     </span>
 </div>
 <!-- Variation -->
