--- a/resources/views/Item/Components/SingleItem/SingleItem_Details.twig
+++ b/resources/views/Item/Components/SingleItem/SingleItem_Details.twig
@@ -22,7 +22,7 @@
         </p>
         <p>
             <b>EAN </b>
-            <span>${ barcode.code }</span>
+            <span>${ currentVariation.barcodes[0].code }</span>
         </p>
     </span>
 </div>
