--- a/resources/views/Item/Components/SingleItem/SingleItem_Details.twig
+++ b/resources/views/Item/Components/SingleItem/SingleItem_Details.twig
@@ -28,6 +28,10 @@
             <b>{{ trans("Ceres::Template.singleItemCondition") }}: </b>
             <span>${ currentVariation.item.storeSpecial.names.name }</span>
         </p>
+        <p>
+            <b>{{ trans("Ceres::Template.singleItemModel") }}: </b>
+            <span>${ currentVariation.item.model }</span>
+        </p>
     </span>
 </div>
 <!-- Variation -->
