--- a/resources/views/Item/Components/SingleItem/SingleItem_Details.twig
+++ b/resources/views/Item/Components/SingleItem/SingleItem_Details.twig
@@ -30,7 +30,7 @@
         </p>
         <p>
             <b>{{ trans("Ceres::Template.singleItemModel") }}: </b>
-            <span>${ currentVariation.item.model }</span>
+            <span>${ currentVariation.variation.id }</span>
         </p>
     </span>
 </div>
