--- a/resources/views/Item/Components/SingleItem/SingleItem_Details.twig
+++ b/resources/views/Item/Components/SingleItem/SingleItem_Details.twig
@@ -24,20 +24,41 @@
             <b>EAN: </b>
             <span>${ currentVariation.barcodes[0].code }</span>
         </p>
+        {% if 'item.condition' in itemData or 'all' in itemData %}
         <p>
             <b>{{ trans("Ceres::Template.singleItemCondition") }}: </b>
             <span>${ currentVariation.item.condition.names.name }</span>
         </p>
+        {% endif %}
         {% if ('item.variation_model' in itemData or 'all' in itemData) %}
         <p>
             <b>{{ trans("Ceres::Template.singleItemModel") }}: </b>
             <span>${ currentVariation.variation.model }</span>
         </p>
         {% endif %}
+        {% if 'item.manufacturer' in itemData or 'all' in itemData %}
         <p>
             <b>{{ trans("Ceres::Template.singleItemManufacturer") }}: </b>
             <span>${ currentVariation.item.manufacturer.externalName }</span>
         </p>
+        {% endif %}
+        {% if 'item.producerCountry' in itemData or 'all' in itemData %}
+            <p>
+                <b>{{ trans("Ceres::Template.singleItemManufacturingCountry") }}</b>
+                <span>${ currentVariation.item.producingCountry.names.name }</span>
+            </p>
+        {% endif %}
+        {% if 'item.weightNetG' in itemData or 'all' in itemData %}
+            <p>
+                <b>{{ trans("Ceres::Template.singleItemNetWeight") }}</b>
+                <span>${ currentVariation.variation.weightNetG } g</span>
+            </p>
+        {% endif %}
+        <p>
+            <b>{{ trans("Ceres::Template.singleItemContent") }}</b>
+            <span>{{ item.documents[0].data.stock.net }}</span>
+        </p>
+
     </span>
 </div>
 <!-- Variation -->
