--- a/resources/views/Item/Components/SingleItem/SingleItem_Details.twig
+++ b/resources/views/Item/Components/SingleItem/SingleItem_Details.twig
@@ -56,7 +56,7 @@
         {% endif %}
         <p>
             <b>{{ trans("Ceres::Template.singleItemContent") }}</b>
-            <span>${ currentVariation.documents[0].data.stock.net }</span>
+            <span>{{ item.documents[0].data.stock.net }}</span>
         </p>
 
     </span>
