--- a/resources/views/Item/Components/SingleItem/SingleItem_Details.twig
+++ b/resources/views/Item/Components/SingleItem/SingleItem_Details.twig
@@ -55,7 +55,7 @@
             </p>
         {% endif %}
         <p>
-            <b>{% if currentVariation.texts.lang == 'en %}Stock{% endif %}</b>
+            <b>{% if currentVariation.texts.lang == 'en' %}Stock{% endif %}</b>
             <span>${ currentVariation.stock.net }</span>
         </p>
 
