--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -20,7 +20,7 @@
                     </div>
 
                     <div class="col-12 col-md-7">
-                        {% include "Ceres::Item.Components.SingleItem.SingleItem_InformationTable" %}
+                        {% include "BlueBerry::Item.Components.SingleItem.SingleItem_InformationTable" %}
                     </div>
 
                 </div>
