--- a/resources/views/Item/Components/SingleItem/SingleItem_InformationTable.twig
+++ b/resources/views/Item/Components/SingleItem/SingleItem_InformationTable.twig
@@ -20,7 +20,7 @@
 
             <div class="tab-pane active overflow-auto" :id="'details-' + currentVariation.variation.id" role="tabpanel" >
                 <div class="my-4">
-                    <div slot="MyProperty">
+                    <div slot="MyProperty" class="my-property">
                         <div class="row">
                             {% for property in item.documents[0].data.properties %}
                                 {% if property.texts.value != '' or property.selection.name != '' or  property.selection.description  != '' or property.valueFloat != '' or property.valueInt != '' %}
