--- a/resources/views/Item/Components/SingleItem/SingleItem_Details.twig
+++ b/resources/views/Item/Components/SingleItem/SingleItem_Details.twig
@@ -83,9 +83,9 @@
 <graduated-prices template="#vue-graduated-prices"></graduated-prices>
 
 {% if ('item.recommendedPrice' in itemData or 'all' in itemData) %}
-    <div class="crossprice" v-if="currentVariation.prices.rrp && currentVariation.prices.rrp.unitPrice.value > 0 && currentVariation.prices.rrp.unitPrice.value > currentVariation.prices.default.unitPrice.value">
+    <div class="crossprice" v-if="currentVariation.prices.rrp && currentVariation.prices.rrp.data.basePrice > 0 && currentVariation.prices.rrp.data.basePrice > currentVariation.prices.default.unitPrice.value">
         <del class="text-muted small">
-            ${ currentVariation.prices.rrp.unitPrice.formatted | itemCrossPrice  }
+            ${ currentVariation.prices.rrp.data.basePrice | itemCrossPrice  }
         </del>
     </div>
 {% endif %}
