--- a/resources/views/Item/Components/SingleItem/SingleItem_Details.twig
+++ b/resources/views/Item/Components/SingleItem/SingleItem_Details.twig
@@ -90,7 +90,7 @@
     </div>
     <div class="discount">
         {{ currentVariation.prices.default.price.value }}
-        ${ currentVariation.prices.default.price.value + 100 }
+        {% set discountNew = item.documents[0].data.prices.default.price.value + 100 %}
         {{ discountNew }}
     </div>
 {% endif %}
