--- a/resources/views/Item/Components/SingleItem/SingleItem_Details.twig
+++ b/resources/views/Item/Components/SingleItem/SingleItem_Details.twig
@@ -90,7 +90,7 @@
     </div>
     <div class="discount">
         {% set discountNew = 100 - ((item.documents[0].data.prices.default.price.value * 100) / item.documents[0].data.prices.rrp.data.basePrice) %}
-        {{ discountNew }}
+        {{ discountNew|round }}
     </div>
 {% endif %}
 
