--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -168,6 +168,11 @@ nav.navbar:not(.megamenu) .nav-dropdown-inner li:hover {
     padding: 0 15px;
 }
 
+.discount {
+    font-weight: bold;
+    font-size: 1.5rem;
+}
+
 @media (min-width: 992px) {
     #mainNavbarCollapsable ul.mainmenu>li>ul {
         background-color: #ffffff;
