--- a/resources/views/Item/Components/SingleItem/SingleItem_Details.twig
+++ b/resources/views/Item/Components/SingleItem/SingleItem_Details.twig
@@ -85,12 +85,12 @@
 {% if ('item.recommendedPrice' in itemData or 'all' in itemData) %}
     <div class="crossprice" v-if="currentVariation.prices.rrp && currentVariation.prices.rrp.data.basePrice > 0 && currentVariation.prices.rrp.data.basePrice > currentVariation.prices.default.unitPrice.value">
         <del class="text-muted small">
-            {% if item.documents[0].data.texts.lang == 'en' %}RRP{% endif %}{% if item.documents[0].data.texts.lang == 'de' %}UVP{% endif %} ${ currentVariation.prices.rrp.currency } ${ currentVariation.prices.rrp.data.basePrice }
+            {% if item.documents[0].data.texts.lang == 'en' %}RRP{% endif %}{% if item.documents[0].data.texts.lang == 'de' %}UVP{% endif %} ${ currentVariation.prices.rrp.data.basePrice } ${ currentVariation.prices.rrp.currency }
         </del>
     </div>
     <div class="discount">
         {% set discountNew = 100 - ((item.documents[0].data.prices.default.price.value * 100) / item.documents[0].data.prices.rrp.data.basePrice) %}
-        {% if item.documents[0].data.texts.lang == 'en' %}Dsicount:{% endif %}{% if item.documents[0].data.texts.lang == 'de' %}Ersparnis:{% endif %} {{ discountNew|round }} %
+        {% if item.documents[0].data.texts.lang == 'en' %}Dsicount:{% endif %}{% if item.documents[0].data.texts.lang == 'de' %}Ersparnis:{% endif %} {{ discountNew|round }}%
     </div>
 {% endif %}
 
