--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -14,7 +14,7 @@
                     </div>
 
                     <div class="col-12 col-md-5">
-                        <div v-stick-in-parent data-sticky-container="#page-body">
+                        <div v-stick-in-parent class="widget widget-sticky sticky-element">
                             {% include "BlueBerry::Item.Components.SingleItem.SingleItem_Details" %}
                         </div>
                     </div>
