--- a/resources/views/Item/Components/SingleItem/SingleItem_Details.twig
+++ b/resources/views/Item/Components/SingleItem/SingleItem_Details.twig
@@ -88,7 +88,7 @@
             {% if item.documents[0].data.texts.lang == 'en' %}RRP{% endif %}{% if item.documents[0].data.texts.lang == 'de' %}UVP{% endif %} ${ currentVariation.prices.rrp.data.basePrice } ${ currentVariation.prices.rrp.currency }
         </del>
     </div>
-    {% if currentVariation.prices.rrp && currentVariation.prices.rrp.data.basePrice > 0 and currentVariation.prices.rrp.data.basePrice > currentVariation.prices.default.unitPrice.value %}
+    {% if item.documents[0].data.prices.rrp && item.documents[0].data.prices.rrp.data.basePrice > 0 and item.documents[0].data.prices.rrp.data.basePrice > item.documents[0].data.prices.default.unitPrice.value %}
         <div class="discount">
             {% set discountNew = 100 - ((item.documents[0].data.prices.default.price.value * 100) / item.documents[0].data.prices.rrp.data.basePrice) %}
             {% if item.documents[0].data.texts.lang == 'en' %}Discount:{% endif %}{% if item.documents[0].data.texts.lang == 'de' %}Ersparnis:{% endif %} {{ discountNew|round }}%
