--- a/resources/views/Item/Components/SingleItem/SingleItem_Details.twig
+++ b/resources/views/Item/Components/SingleItem/SingleItem_Details.twig
@@ -85,7 +85,7 @@
 {% if ('item.recommendedPrice' in itemData or 'all' in itemData) %}
     <div class="crossprice" v-if="currentVariation.prices.rrp && currentVariation.prices.rrp.data.basePrice > 0 && currentVariation.prices.rrp.data.basePrice > currentVariation.prices.default.unitPrice.value">
         <del class="text-muted small">
-            {% if item.documents[0].data.texts.lang == 'en' %}RRP{% endif %}{% if item.documents[0].data.texts.lang == 'de' %}UVP{% endif %} ${ currentVariation.prices.rrp.data.basePrice } ${ currentVariation.prices.rrp.currency }
+            {% if item.documents[0].data.texts.lang == 'en' %}RRP ${ currentVariation.prices.rrp.currency } ${ currentVariation.prices.rrp.data.basePrice } {% endif %}{% if item.documents[0].data.texts.lang == 'de' %}UVP ${ currentVariation.prices.rrp.data.basePrice } ${ currentVariation.prices.rrp.currency }{% endif %}
         </del>
     </div>
     {% if item.documents[0].data.prices.rrp and item.documents[0].data.prices.rrp.data.basePrice > 0 and item.documents[0].data.prices.rrp.data.basePrice > item.documents[0].data.prices.default.unitPrice.value %}
