--- a/resources/views/ItemList/Components/CategoryItem.twig
+++ b/resources/views/ItemList/Components/CategoryItem.twig
@@ -66,7 +66,7 @@
                                     ${ item.prices.default.unitPrice.formatted | itemCrossPrice(true) }
                                 </del>
                                 <del class="crossprice" v-else>
-                                    RRP ${ item.prices.rrp.currency } ${ item.prices.rrp.data.basePrice }
+                                    RRP ${ item.texts.lang } ${ item.prices.rrp.data.basePrice }
                                 </del>
                             </div>
 
